# config-driven-development-platform

./: README.md
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: getting-started.md  introduction.md  server.md  structure.md  workbench.md
docs/reference/: server-api.md  workbench.md
server/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
server/app/: database.py  db_init.py  main.py
server/app/api/: router.py
server/app/api/endpoints/: health.py  workbench.py
server/app/core/: config.py
server/app/models/: workbench.py
server/app/schemas/: workbench.py
server/app/services/: workbench_service.py  workbench_service_db.py
server/sql/: 001_init.sql  002_add_deleted_field.sql  003_add_config_history.sql
workbench/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
workbench/mock/: config-store.ts  index.ts
workbench/src/: App.vue  http.ts  main.ts  style.css
workbench/src/components/: JsonEditorPane.vue  PreviewPane.vue
workbench/src/components/FolderTree/: FolderTreeContent.vue  FolderTreeFooter.vue  FolderTreeHeader.vue  index.ts  index.vue  types.ts  useContextMenu.ts  useFolderTree.ts  useSync.ts  useTreeData.ts  useTreeDrag.ts
workbench/src/composables/: useActiveConfig.ts  useComponentType.ts  useEditorResize.ts
workbench/src/pages/: ConfigCenter.vue
workbench/src/router/: index.ts
